# pet-breed-uncertainty-aware-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
scripts/: evaluate.py  predict.py  train.py
src/pet_breed_uncertainty_aware_classifier/: __init__.py
src/pet_breed_uncertainty_aware_classifier/data/: __init__.py  loader.py  preprocessing.py
src/pet_breed_uncertainty_aware_classifier/evaluation/: __init__.py  metrics.py
src/pet_breed_uncertainty_aware_classifier/models/: __init__.py  components.py  model.py
src/pet_breed_uncertainty_aware_classifier/training/: __init__.py  trainer.py
src/pet_breed_uncertainty_aware_classifier/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_evaluation.py  test_model.py  test_training.py
